The definitive version, fixed contrast in footer

--- a/w03/styles/place.css
+++ b/w03/styles/place.css
@@ -59,9 +59,9 @@ td{
     text-align: left;
     padding-left: 1rem;
 }
-footer{
-    background-color: var(--secondary-color);
-    color: var(--text-light);
-    text-align: center;
-    padding: 1rem;
+footer {
+  background-color: #a50e1e;
+  color: #ffffff;
+  text-align: center;
+  padding: 1rem;
 }
